Fixed bug #48781 (Cyclical garbage collector memory leak)